made yt-ad-faster-verison-2.0 with various changes to UI and ad fasten logic

--- a/popup.html
+++ b/popup.html
@@ -1,73 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>YouTube Ad Skipper</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 10px;
-      text-align: center;
-      background-color: #1c1c1c;
-      color: #ff4545;
-      border-radius: 30px;
-    }
-    h1 {
-      color: #ff4545;
-      font-size: 24px;
-    }
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 14px;
-      cursor: pointer;
-      text-align: center;
-      text-decoration: none;
-      outline: none;
-      color: #fff;
-      background-color: #0088cc;
-      border: none;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      transition: all 0.3s;
-    }
-
-    .button:hover {
-      background-color: #005c99;
-    }
-    .button:active {
-      background-color: #005c99;
-      box-shadow: 0 5px #666;
-      transform: translateY(4px);
-    }
-    .banner {
-      margin-top: 20px;
-      padding: 10px;
-      border-radius: 15px;
-    }
-    .banner img {
-      height: 50px;
-      border-radius: 10px;
-    }
-    p.status {
-      color: #4CAF50;
-    }
-  </style>
+  <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-  <h1>Ad Skipper by PNLN</h1>
-  <p class="status">Status: Active </p>
-  <p></p>
-  <h3>Enjoy YouTube</h3>
+  <div class="popup-card">
+    <h1>Youtube AD Faster</h1>
 
-  <div>
-    <h3>MADE BY : </h3>
-  <div>PIYUSH</div>
-  <div>NITIN</div>
-  <div>LUV</div>
-  <div>NISHANT</div></div>
+    <p class="status">
+      Status: <span class="status-active">Active</span>
+    </p>
 
+    <h3>Enjoy YouTube ADs Free</h3>
+
+    <div class="authors">
+      <h4>Made By:</h4>
+      <div class="author-list">
+        <span>PIYUSH RANAKOTI</span>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
-
